namespace DataSourceAccess
{
    public enum Currency
    {
        RUB,
        BYR,
        USD,
        EUR
    }
}