namespace ExchangeOffice
{
    public class GetLogCommand
    {
        
    }
}