namespace ExchangeOfficeApplication
{
    public class Administrator : Account
    {
        
    }
}