namespace ExchangeOfficeApplication
{
    public class Cashier : Account
    {
        
    }
}