namespace ExchangeOfficeApplication.Command
{
    public class ExchangeCommand
    {
        
    }
}