namespace ExchangeOfficeApplication.Command
{
    public interface ICommand
    {
        
    }
}