namespace Executor_Commands
{
    public interface IEventsCommands
    {
        
    }
}