namespace Executor_Commands
{
    public interface IExecutorCommands
    {
        
    }
}