namespace ExchangeOfficeApplication.Executor_commands.Service
{
    public class GetLogService
    {
        
    }
}