namespace ExchangeOfficeApplication.Executor_commands.Service
{
    public interface IService
    {
        
    }
}