namespace ExchangeOfficeApplication.Executor_commands.Service
{
    public class LoginService
    {
        
    }
}