namespace ExchangeOfficeApplication.Executor_commands
{
    public class ExecutorCommands
    {
        
    }
}